syntax = "proto3";
package nebulix.storage.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "nebulix/x/storage/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "nebulix/x/storage/Params";
  option (gogoproto.equal) = true;

  int64 price_per_gb_day = 1;
  int64 provider_deposit = 2;
  uint64 proof_window_blocks = 3;
  uint64 proof_round_blocks = 4;
}
